--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
   <h1>Aboutus</h1>
   <p>Resize this responsive page to see the effect!</p> 
   <h6>Kaural Rana</h6>
+  <a href="#">Tags</a>
 </div>
 
 
