--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<!--hahahahahah this is branch feature okay -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +14,7 @@
   <h1>Aboutus</h1>
   <p>Resize this responsive page to see the effect!</p> 
   <h6>Kaural Rana</h6>
-  <a href="#">Tags</a>
+  <a href="#">branches feature</a>
 </div>
 
 
